opam-version: "2.0"
name: "satysfi-fonts-han-serif-jp-doc"
version: "1.001R"
synopsis: "Document of SATySFi Font Package for han serif JP fonts"
description: """
Document package for satysfi-fonts-han-serif-jp
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-fonts-han-serif-jp" { = "%{version}%" }
  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "fonts-han-serif-jp-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "fonts-han-serif-jp-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
