opam-version: "2.0"
name: "satysfi-fonts-han-serif-jp"
version: "1.001R"
synopsis: "SATySFi Font Package for han serif JP fonts"
description: """
SATySFi font package for han serif JP fonts.

This package installs fonts from https://github.com/adobe-fonts/source-han-serif.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "OFL-1.1"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-han-serif-jp.git"
extra-source "SourceHanSerifJP.zip" {
  archive: "https://github.com/puripuri2100/source-han-serif/releases/download/1.001R/SourceHanSerifJP.zip"
  checksum: [
    "sha256=0c78abd9261986f59f80c148f5bdc52c7531ea2c59e9a434bd9a7b80610bcaa3"
    "sha512=5e6005e904619b671b1ffd089a0f44e0502e3a6af1dca749ddcf0fe0fe6d67cbb0d2e19099f5e0da173a31e67bcbeb6f884e41eb998141346be69122452a0ae4"
  ]
}
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [
  ["unzip" "-j" "-d" "SourceHanSerifJP" "-o" "SourceHanSerifJP.zip" "*.otf"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "fonts-han-serif-jp"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
